# CSC-4402-Group-Project

./: .gitmodules  CMakeLists.txt  Database Reset.sql  README.md  plant_store.db
database/: database_reset.sql  plant_store.db
documents/: Project Code.docx  Project Planning.docx  testFile
plant_store/: customer.ibd  customer_order.ibd  employee.ibd  inventory.ibd  manager.ibd  order_item.ibd  plant.ibd  product.ibd  seed.ibd  store.ibd  tool.ibd
precompiled_files/: project
src/: checksql.hpp  dblink.hpp  helperfunctions.hpp  main.cpp  sqlfunctions.hpp  user_interface.cpp  userinterface.hpp
